:gear/; Ajustes noprojeto histrorico do registro
